# voltchain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/2026-05-04-162144_create_trades/: up.sql
backend/migrations/2026-05-09-143000_create_ledger_cursors/: down.sql  up.sql
backend/migrations/2026-05-09-150000_add_tx_hash_to_trades/: down.sql  up.sql
backend/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs  stellar_sync.rs
contracts/contracts/energy-trade/: Cargo.toml
contracts/contracts/energy-trade/src/: lib.rs  test.rs
contracts/contracts/energy-trade/test_snapshots/test/: test_trade.1.json  test_trade_and_storage.1.json
docs/: ARCHITECTURE.md  WALKTHROUGH.md
frontend/: package-lock.json
frontend/src/app/: globals.css
frontend/src/components/: Dashboard.tsx
scripts/: deploy-testnet.sh
